--- a/VarlikZimmetDepoYonetim.UI/VarlikZimmetDepoYonetim.UI.csproj
+++ b/VarlikZimmetDepoYonetim.UI/VarlikZimmetDepoYonetim.UI.csproj
@@ -58,11 +58,29 @@
     <Compile Include="FrmGirisEkrani.Designer.cs">
       <DependentUpon>FrmGirisEkrani.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmTuket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTuket.Designer.cs">
+      <DependentUpon>FrmTuket.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmVarlikBilgileri.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmVarlikBilgileri.Designer.cs">
+      <DependentUpon>FrmVarlikBilgileri.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmVarliklar.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmVarliklar.Designer.cs">
       <DependentUpon>FrmVarliklar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmZimmetAtama.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmZimmetAtama.Designer.cs">
+      <DependentUpon>FrmZimmetAtama.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -72,8 +90,17 @@
     <EmbeddedResource Include="FrmGirisEkrani.resx">
       <DependentUpon>FrmGirisEkrani.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmTuket.resx">
+      <DependentUpon>FrmTuket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmVarlikBilgileri.resx">
+      <DependentUpon>FrmVarlikBilgileri.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmVarliklar.resx">
       <DependentUpon>FrmVarliklar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmZimmetAtama.resx">
+      <DependentUpon>FrmZimmetAtama.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -115,6 +142,15 @@
       <Project>{D6A47BDE-9845-4A65-A835-0BD55BF3C7D6}</Project>
       <Name>VarlikZimmetDepoYonetim.Provider</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\png-transparent-announce-megaphone-icon-megaphone-icon-announcement-icon-symbol-announcement-communication-marketing-speaker-thumbnail.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\indir.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\blue-search-icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
