--- a/VarlikZimmetDepoYonetim.Provider/VarlikZimmetDepoYonetim.Provider.csproj
+++ b/VarlikZimmetDepoYonetim.Provider/VarlikZimmetDepoYonetim.Provider.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlDbService.cs" />
     <Compile Include="SqlProviderService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
