--- a/VarlikZimmetDepoYonetim.UI/VarlikZimmetDepoYonetim.UI.csproj
+++ b/VarlikZimmetDepoYonetim.UI/VarlikZimmetDepoYonetim.UI.csproj
@@ -66,6 +66,18 @@
     <Compile Include="FrmGirisEkrani.Designer.cs">
       <DependentUpon>FrmGirisEkrani.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmRapor_1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRapor_1.Designer.cs">
+      <DependentUpon>FrmRapor_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmRapor_2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmRapor_2.Designer.cs">
+      <DependentUpon>FrmRapor_2.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmSSSorular.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +118,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGirisEkrani.resx">
       <DependentUpon>FrmGirisEkrani.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRapor_1.resx">
+      <DependentUpon>FrmRapor_1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmRapor_2.resx">
+      <DependentUpon>FrmRapor_2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmSSSorular.resx">
       <DependentUpon>FrmSSSorular.cs</DependentUpon>
