--- a/VarlikZimmetDepoYonetim.DAL/VarlikZimmetDepoYonetim.DAL.csproj
+++ b/VarlikZimmetDepoYonetim.DAL/VarlikZimmetDepoYonetim.DAL.csproj
@@ -56,8 +56,10 @@
     <Compile Include="ProductDAL.cs" />
     <Compile Include="ProductStatusDAL.cs" />
     <Compile Include="ProductTypeDAL.cs" />
+    <Compile Include="ProductWarehouseDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuestionDAL.cs" />
+    <Compile Include="ReportDAL\TeamAssignmentReportDAL.cs" />
     <Compile Include="TeamAssignmentDAL.cs" />
     <Compile Include="UserAssignmentDAL.cs" />
     <Compile Include="UserLoginDAL.cs" />
@@ -72,5 +74,6 @@
       <Name>VarlikZimmetDepoYonetim.Provider</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
